# astroport-bootstrapping

./: .gitconfig  .gitignore  Cargo.toml  PR_notes  README.md  build_release.sh
.github/workflows/: check_artifacts_size.yml  tests_and_checks.yml
artifacts/: astro_airdrop.wasm  astro_auction.wasm  astro_bootstrap_auction.wasm  astroport_airdrop.wasm  astroport_auction.wasm  astroport_factory.wasm  astroport_generator.wasm  astroport_lockdrop.wasm  astroport_pair.wasm  astroport_token.wasm  astroport_vesting.wasm  bombay-12-deployed-pools.json  bombay-12.json  checksums.txt  checksums_intermediate.txt  columbus-5.json  cw20_token.wasm  mars_airdrop.wasm  mock_astro_auction.wasm  terraswap_factory.wasm  terraswap_pair.wasm  terraswap_router.wasm  terraswap_token.wasm
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/examples/: airdrop_schema.rs  schema.rs
contracts/airdrop/schema/: config.json  config_response.json  execute_msg.json  instantiate_msg.json  is_claimed.json  query_msg.json  user_info_response.json
contracts/airdrop/src/: contract.rs  crypto.rs  msg.rs  state.rs
contracts/airdrop/tests/: integration.rs
contracts/auction/: Cargo.toml  README.md
contracts/auction/.cargo/: config
contracts/auction/examples/: auction_schema.rs  schema.rs
contracts/auction/schema/: callback_msg.json  config.json  config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  state.json  state_response.json  update_config_msg.json  user_info.json  user_info_response.json
contracts/auction/src/: contract.rs  state.rs
contracts/auction/tests/: integration.rs
contracts/cw20-token/: Cargo.toml
contracts/cw20-token/examples/: schema.rs
contracts/cw20-token/schema/: minter_data.json  token_info.json
contracts/cw20-token/src/: contract.rs
contracts/lockdrop/: Cargo.toml  README.md
contracts/lockdrop/examples/: lockdrop_schema.rs  schema.rs
contracts/lockdrop/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  lock_up_info_response.json  pool_response.json  query_msg.json  state_response.json  update_config_msg.json  user_info_response.json
contracts/lockdrop/src/: contract.rs  lib.rs  migration.rs  mock_querier.rs  msg.rs  raw_queries.rs  state.rs  testing.rs
contracts/lockdrop/tests/: integration.rs
contracts/lockdrop/tests/lockdrop-v111/: Cargo.toml
contracts/lockdrop/tests/lockdrop-v111/src/: contract.rs
contracts/lp_bootstrap_auction/: Cargo.toml  README.md
contracts/lp_bootstrap_auction/examples/: schema.rs
contracts/lp_bootstrap_auction/schema/: config.json  config_response.json  instantiate_msg.json  state_response.json  user_info.json
contracts/lp_bootstrap_auction/src/: contract.rs  msg.rs  state.rs
contracts/mocks/mock_astroport/factory/: Cargo.toml
contracts/mocks/mock_astroport/factory/tests/: integration.rs
contracts/mocks/mock_astroport/generator/: Cargo.toml
contracts/mocks/mock_astroport/generator/tests/: integration.rs
contracts/mocks/mock_astroport/generator_proxy_to_mirror/: Cargo.toml
contracts/mocks/mock_astroport/maker/: Cargo.toml
contracts/mocks/mock_astroport/oracle/: Cargo.toml
contracts/mocks/mock_astroport/pair/: Cargo.toml
contracts/mocks/mock_astroport/pair/src/: contract.rs  testing.rs
contracts/mocks/mock_astroport/pair/tests/: integration.rs
contracts/mocks/mock_astroport/pair_stable/: Cargo.toml
contracts/mocks/mock_astroport/router/: Cargo.toml
contracts/mocks/mock_astroport/staking/: Cargo.toml
contracts/mocks/mock_astroport/token/: Cargo.toml
contracts/mocks/mock_astroport/vesting/: Cargo.toml
contracts/mocks/mock_astroport/vesting/src/: contract.rs  error.rs  testing.rs
contracts/mocks/mock_auction/: Cargo.toml
contracts/mocks/mock_auction/examples/: schema.rs
contracts/mocks/mock_auction/schema/: callback_msg.json  instantiate_msg.json  query_msg.json  state.json  user_info.json  user_info_response.json
contracts/mocks/mock_auction/src/: contract.rs
contracts/simple_airdrop/: Cargo.toml  README.md
contracts/simple_airdrop/examples/: airdrop_schema.rs
contracts/simple_airdrop/schema/: config.json  config_response.json  execute_msg.json  state.json  user_info_response.json
contracts/simple_airdrop/src/: contract.rs  crypto.rs  state.rs
contracts/simple_airdrop/tests/: integration.rs
scripts/: Readme.md  airdrop.spec.ts  auction_admin_functions.ts  build_release.sh  configs.ts  create_airdrop_json.ts  create_astro_ust_pool.ts  create_astroport_pools.ts  create_dual_incentives_env.ts  create_lockdrop_env.ts  create_phase1_pools.ts  deploy_airdrop.ts  deploy_airdrop_bombay.ts  deploy_configs.ts  deploy_periphery_contracts.ts  deploy_proxy_contracts.ts  deploy_script.ts  initialize_pools.ts  integration_test.spec.ts  list_of_users_eligible_for_airdrop.json  mainnet_deploy_periphery_contracts.ts  migrate_liquidity_to_astroport.ts  package-lock.json  package.json  set_dual_incentive_rewards_generator.ts  set_generator_in_periphery.ts  stake_AstroLP_tokens.ts  stake_astro_LP_tokens.ts  testing_.ts  testnet_bootstrap_astro_ust_pool.ts  testnet_create_dual_incentives_env.ts  testnet_create_lockdrop_env.ts  testnet_deploy_periphery_contracts.ts  testnet_migrate_liquidity_to_astroport.ts  testnet_set_dual_incentive_rewards_generator.ts  testnet_set_generator_in_periphery.ts  testnet_stake_astro_LP_tokens.ts  transfer_tokens.ts
scripts/helpers/: airdrop_helpers.ts  evm_merkle_tree.ts  helpers.ts  merkle_tree_utils.ts
scripts/helpers/airdrop_data/: EVM_airdrop_recepients.json  Terra_airdrop_recepients.json  airdrop_recipients.json
