[workspace]
members = [
    "contracts/airdrop", 
     "contracts/auction", 
     "contracts/lockdrop", 
     "contracts/mocks/mock_astroport/*", 
    "packages/*"
]


[profile.release.package.astroport]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false


[profile.release.package.astroport-periphery]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true