[workspace]
members = [
    # "contracts/airdrop", 
    "contracts/simple_airdrop", 
    # "contracts/auction", 
    # "contracts/lockdrop", 
    "packages/*"
]


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true