[package]
name = "mars-airdrop"
version = "0.1.0"
authors = ["Alien hunter no. 42 <84127070+alienHunterOnMars@users.noreply.github.com>"]
edition = "2018"
description = "Contract to facilitate MARS Token airdrop"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cw20-base = { version = "0.8", features = ["library"] }
schemars = "0.8.3"

hex = "0.4.3"
sha3 = "0.9.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }