[package]
name = "astroport-auction"
version = "1.0.0"
authors = ["_astromartian"]
edition = "2018"
description = "Contract to facilitate ASTRO-UST LP Pool bootstrapping via auction"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.1.0" }
astroport-periphery = { path = "../../packages/astroport_periphery" }

cw20 = { version = "0.8" }
cw2 = { version = "0.8" }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
terra-multi-test = { git = "https://github.com/astroport-fi/terra-plus.git", tag = "v0.8.0-terra1" }
# needed for intergration testing
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.1.0" }
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.1.0" }
astroport-vesting = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.1.0" }
astroport-generator = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.1.0" }
astroport-airdrop = { path = "../airdrop" }
astroport-lockdrop = { path = "../lockdrop" }
