[package]
name = "astroport-lockdrop"
version = "1.0.0"
authors = ["alien Hunter <alienHunterOnMars@protonmail.com>"]
edition = "2018"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
astroport = {git = "https://github.com/astroport-fi/astroport.git", branch = "master"}
astroport-periphery =  { path = "../../packages/astroport_periphery" }
terraswap = "2.4.0"
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw20 = { version = "0.8" } 
cw-storage-plus = "0.8"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}
terraswap = "2.4.0"
# Terraswap contracts
terraswap-factory = {git = "https://github.com/terraswap/terraswap.git", branch = "main", package = "terraswap-factory"}
terraswap-pair = {git = "https://github.com/terraswap/terraswap.git", branch = "main", package = "terraswap-pair"}
terraswap-token = {git = "https://github.com/terraswap/terraswap.git", branch = "main", package = "terraswap-token"}
# Astroport contracts
astroport-factory = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-factory"}
astroport-pair = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-pair"}
astroport-pair-stable = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-pair-stable"}
astroport-token = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-token"}
astroport-vesting = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-vesting"}
astroport-generator = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-generator"}
astro-auction = {path = "../auction"}