[package]
name = "astroport-lockdrop"
version = "1.2.0"
authors = ["_astromartian"]
edition = "2021"


exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-periphery = { path = "../../packages/astroport_periphery" }
terraswap = "2.4.0"
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw20 = { version = "0.8" }
cw2 = { version = "0.8" }
cw-storage-plus = "0.8"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
terra-multi-test = { git = "https://github.com/astroport-fi/terra-plus.git", tag = "v0.9.1-terra" }
terraswap = "2.4.0"
terra-cosmwasm = "2.2.0"
# Terraswap contracts
terraswap-factory = { git = "https://github.com/astroport-fi/terraswap.git", branch = "main" }
terraswap-pair = { git = "https://github.com/astroport-fi/terraswap.git", branch = "main" }
terraswap-token = { git = "https://github.com/astroport-fi/terraswap.git", branch = "main" }
# Astroport contracts
astroport-factory = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-pair-stable = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-vesting = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-generator = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-generator-proxy-to-mirror = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-staking = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-xastro-token = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-auction = { path = "../auction" }
astroport-airdrop = { path = "../airdrop" }
astroport-whitelist = { git = "https://github.com/astroport-fi/astroport-core.git", branch = "main" }
astroport-governance = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
voting-escrow = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
astroport-lockdrop_v111 = {path="./tests/lockdrop-v111", package = "astroport-lockdrop-v111"}
mirror-staking = {git = "https://github.com/Mirror-Protocol/mirror-contracts.git", tag = "v2.1.1", package = "mirror-staking"}
mirror-protocol = {version = "2.1.1"}

[dev-dependencies.astroport-periphery_v111]
git = "https://github.com/astroport-fi/astroport-bootstrapping"
package = "astroport-periphery"
rev = "31be27283ebe0473898000268d1a75cba3960062"

[dev-dependencies.astroport-generator_v120]
git = "https://github.com/astroport-fi/astroport-core"
package = "astroport-generator"
rev = "973aab9419229cb221023066f96b18f2edf75ba8"

[dev-dependencies.astroport-package-generator_v120]
git = "https://github.com/astroport-fi/astroport-core"
package = "astroport"
rev = "973aab9419229cb221023066f96b18f2edf75ba8"
