[package]
name = "astroport-lockdrop-v111"
version = "1.1.1"
authors = ["Astroport"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "973aab9419229cb221023066f96b18f2edf75ba8" }
astroport-periphery = { git = "https://github.com/astroport-fi/astroport-bootstrapping", rev = "3e6e7ecaba0538643c15cb0200ca1e1b6ac8f385" }
terraswap = "2.4.0"
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw20 = { version = "0.8" }
cw2 = { version = "0.8" }
cw-storage-plus = "0.8"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"
